feat: added image endpoint
