# src/routes/index.ts
@@ -3,11 +3,13 @@ import { Router } from 'express'
 import HealthRouter from '@/routes/health.routes'
 import ProductRouter from '@/routes/product.routes'
 import InvitedRouter from '@/routes/invited.routes'
+import ImageRouter from '@/routes/image.routes'
 
 const routes = Router()
 
 routes.use('/health', HealthRouter)
 routes.use('/products', ProductRouter)
 routes.use('/inviteds', InvitedRouter)
+routes.use('/imagess', ImageRouter)
 
 export default routes
